DES new Version 2.0.2

--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -1,3 +1,6 @@
+app.title=Google Index Retreiver
+
+
 emptyQueryException=Empty query. Insert one.
 manyResults=Too many results. Be more specific.
 export=Export
