--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -1,50 +1,76 @@
 app.title=Google Index Retreiver
+app.tab.retriever=Retriever
+app.tab.spam=Find Spam
+app.tab.navigator=Navigator
+
+#Menu
+menu.file=File
+menu.editKeywords=Edit Keywords
+menu.editSpamKeywords=Edit Spam Keywords
+menu.helpMenu=Help
+menu.help=GIR Help
+menu.about=About
+
+helpURL=https://www.elevenpaths.com/labs/tools/index.html
+
+#Body
+app.body.search=Search...
+app.body.start=Start
+app.body.start.tooltip=Start searching
+app.body.oneShot=One Shot
+app.body.oneShot.tooltip=One Shot start searching
+app.body.stop=Stop
+app.body.stop.tooltip=Stop searching
+app.body.query=Query:
+app.body.elapsed=Elapsed:
+app.body.elapsed.time=00:00:00
+app.body.clean=Clean
+app.body.clean.tooltip=Clean results
+app.body.export=Export
+app.body.export.tooltip=Export results
+
+#Navigator
+app.navigator.go=Go
+app.navigator.go.tooltip=Use http or https in the URLs
+app.navigator.options=Options
+app.navigator.enableContextMenu=Enable Context Menu
+app.navigator.normal=Normal
+app.navigator.10bigger=10% Bigger
+app.navigator.10smaller=10% Smaller
+app.navigator.gray=Gray
+app.navigator.lcd=LCD
+app.navigator.fontScale=Font Scale
+app.navigator.fontSmoothing=Font Smoothing
+app.navigator.zoom=Zoom
+app.navigator.enableJavascript=Enable Javascript
+
+#Dialog
+alert.dialog.newWord=Add new word...
+alert.dialog.add=Add
+alert.dialog.add.tooltip=Add keyword
+alert.dialog.delete=Delete
+alert.dialog.delete.tooltip=Delete keyword
+alert.dialog.useKeywords=Use Keywords
+alert.dialog.total=Total:
+alert.dialog.save=Save
+alert.dialog.save.tooltip=Save data
+
+#Alert
+alert.title=Information
+alert.about.title=About
+alert.export.success=Export successful
+alert.export.error=Error building file
+alert.export.noData=No data to export
+alert.keywords.title=Keywords
+alert.keywords.default=Keywords not found. Default keywords in use
+alert.keywords.error=Error reading Keywords file
+alert.keywords.error.saving=Error saving Keywords into a file
+alert.spamKeywords.title=Spam Keywords
+alert.spamKeywords.default=Spam Keywords not found. Default keywords in use
+alert.spamKeywords.error=Error reading Spam Keywords file
+alert.spamKeywords.error.saving=Error saving Spam Keywords into a file
+alert.save.successful=Save successful
 
 
 emptyQueryException=Empty query. Insert one.
 manyResults=Too many results. Be more specific.
-export=Export
-start=Start
-stop=Stop
-resolveCaptcha=Something went wrong with the captcha. Try again.
-titleCaptcha=Solve the Captcha
-send=Send
-sampleTL=site:evernote.com/pub/ intitle:"lahatte"
-shot=One Shot
-noExport=Nothing to export.
-exportSuccess=Exported successfully.
-saveSuccess=Save sucessful.
-clear=Clear
-helpURL=https://www.elevenpaths.com/labs/tools/index.html
-#Menu
-menu.helpM=Help
-menu.keywords=Edit Keywords
-menu.help=GIR Help
-menu.about=About
-menu.file=File
-menu.export=Export
-menu.editKeywords=Edit Keywords
-menu.retrieveResults=Retriever Results
-menu.spamResults=Spam Results
-menu.spamKeywords=Spam Keywords
-menu.retrieveKeywords=Retriever Keywords
-menu.exit=Exit
-
-
-keywords.title=Edit Keywords
-keywords.message=Keywords: \n
-keywords.notfound=Keywords not found. Using default keywords.
-menu.aboutTitle=About
-menu.aboutMessage=Google Index Retriever(c) ElevenPaths 2015. Version: 0.1
-keywords.add=Add
-keywords.delete=Delete
-keywords.save=Save
-progressbar.ready=Ready
-progressbar.done=Done
-elapsed.start=Elapsed: 00:00:00
-total=Total:
-keywords.use=Use keywords
-
-#Find Panel
-f.sampleTL=site:albacetebalompie.es/index.php ext:php
-notFoundDork="Dork not found"
