DES Added TODO spanish traslation

--- a/src/main/resources/strings_es.properties
+++ b/src/main/resources/strings_es.properties
@@ -1,76 +1,76 @@
-app.title=Google Index Retreiver
-app.tab.retriever=Retriever
-app.tab.spam=Find Spam
-app.tab.navigator=Navigator
+app.title=ES_Google Index Retreiver
+app.tab.retriever=ES_Retriever
+app.tab.spam=ES_Find Spam
+app.tab.navigator=ES_Navigator
 
 #Menu
-menu.file=File
-menu.editKeywords=Edit Keywords
-menu.editSpamKeywords=Edit Spam Keywords
-menu.helpMenu=Help
-menu.help=GIR Help
-menu.about=About
+menu.file=ES_File
+menu.editKeywords=ES_Edit Keywords
+menu.editSpamKeywords=ES_Edit Spam Keywords
+menu.helpMenu=ES_Help
+menu.help=ES_GIR Help
+menu.about=ES_About
 
 helpURL=https://www.elevenpaths.com/labs/tools/index.html
 
 #Body
-app.body.search=Search...
-app.body.start=Start
-app.body.start.tooltip=Start searching
-app.body.oneShot=One Shot
-app.body.oneShot.tooltip=One Shot start searching
-app.body.stop=Stop
-app.body.stop.tooltip=Stop searching
-app.body.query=Query:
-app.body.elapsed=Elapsed:
+app.body.search=ES_Search...
+app.body.start=ES_Start
+app.body.start.tooltip=ES_Start searching
+app.body.oneShot=ES_One Shot
+app.body.oneShot.tooltip=ES_One Shot start searching
+app.body.stop=ES_Stop
+app.body.stop.tooltip=ES_Stop searching
+app.body.query=ES_Query:
+app.body.elapsed=ES_Elapsed:
 app.body.elapsed.time=00:00:00
-app.body.clean=Clean
-app.body.clean.tooltip=Clean results
-app.body.export=Export
-app.body.export.tooltip=Export results
+app.body.clean=ES_Clean
+app.body.clean.tooltip=ES_Clean results
+app.body.export=ES_Export
+app.body.export.tooltip=ES_Export results
 
 #Navigator
-app.navigator.go=Go
-app.navigator.go.tooltip=Use http or https in the URLs
-app.navigator.options=Options
-app.navigator.enableContextMenu=Enable Context Menu
-app.navigator.normal=Normal
-app.navigator.10bigger=10% Bigger
-app.navigator.10smaller=10% Smaller
-app.navigator.gray=Gray
-app.navigator.lcd=LCD
-app.navigator.fontScale=Font Scale
-app.navigator.fontSmoothing=Font Smoothing
-app.navigator.zoom=Zoom
-app.navigator.enableJavascript=Enable Javascript
+app.navigator.go=ES_Go
+app.navigator.go.tooltip=ES_Use http or https in the URLs
+app.navigator.options=ES_Options
+app.navigator.enableContextMenu=ES_Enable Context Menu
+app.navigator.normal=ES_Normal
+app.navigator.10bigger=ES_10% Bigger
+app.navigator.10smaller=ES_10% Smaller
+app.navigator.gray=ES_Gray
+app.navigator.lcd=ES_LCD
+app.navigator.fontScale=ES_Font Scale
+app.navigator.fontSmoothing=ES_Font Smoothing
+app.navigator.zoom=ES_Zoom
+app.navigator.enableJavascript=ES_Enable Javascript
 
 #Dialog
-alert.dialog.newWord=Add new word...
-alert.dialog.add=Add
-alert.dialog.add.tooltip=Add keyword
-alert.dialog.delete=Delete
-alert.dialog.delete.tooltip=Delete keyword
-alert.dialog.useKeywords=Use Keywords
-alert.dialog.total=Total:
-alert.dialog.save=Save
-alert.dialog.save.tooltip=Save data
+alert.dialog.newWord=ES_Add new word...
+alert.dialog.add=ES_Add
+alert.dialog.add.tooltip=ES_Add keyword
+alert.dialog.delete=ES_Delete
+alert.dialog.delete.tooltip=ES_Delete keyword
+alert.dialog.useKeywords=ES_Use Keywords
+alert.dialog.total=ES_Total:
+alert.dialog.save=ES_Save
+alert.dialog.save.tooltip=ES_Save data
 
 #Alert
-alert.title=Information
-alert.about.title=About
-alert.export.success=Export successful
-alert.export.error=Error building file
-alert.export.noData=No data to export
-alert.keywords.title=Keywords
-alert.keywords.default=Keywords not found. Default keywords in use
-alert.keywords.error=Error reading Keywords file
-alert.keywords.error.saving=Error saving Keywords into a file
-alert.spamKeywords.title=Spam Keywords
-alert.spamKeywords.default=Spam Keywords not found. Default keywords in use
-alert.spamKeywords.error=Error reading Spam Keywords file
-alert.spamKeywords.error.saving=Error saving Spam Keywords into a file
-alert.save.successful=Save successful
+alert.title=ES_Information
+alert.about.title=ES_About
+alert.export.success=ES_Export successful
+alert.export.error=ES_Error building file
+alert.export.noData=ES_No data to export
+alert.keywords.title=ES_Keywords
+alert.keywords.default=ES_Keywords not found. Default keywords in use
+alert.keywords.error=ES_Error reading Keywords file
+alert.keywords.error.saving=ES_Error saving Keywords into a file
+alert.spamKeywords.title=ES_Spam Keywords
+alert.spamKeywords.default=ES_Spam Keywords not found. Default keywords in use
+alert.spamKeywords.error=ES_Error reading Spam Keywords file
+alert.spamKeywords.error.saving=ES_Error saving Spam Keywords into a file
+alert.save.successful=ES_Save successful
 
 
-emptyQueryException=Empty query. Insert one.
-manyResults=Too many results. Be more specific.
+emptyQueryException=ES_Empty query. Insert one.
+manyResults=ES_Too many results. Be more specific.
